ART 5.6
* Added jasperreports-functions jar
* Updated mysql driver to version 8

ART 5.5
* Added Time parameter type
* Added DateTime format option for tabular reports
* Updated mariadb driver

ART 5.4
* Added report id and job id to logs
* Added AwesomeChartJs report type with simple pareto chart type
* Added ApexCharts.js report type
* Corrected art-tables.sql for new installs
* Updated bigquery driver, poi, jxls

ART 5.3
* Allow specifying of datepicker options
* Added parallel pipelines

ART 5.2
* Added configure_reports_partial permission to replace user access levels

ART 5.1.2
* Updated italian translation (thanks to Alessandro Conti)

ART 5.1.1
* Updated chinese translation (thanks to linxd)

ART 5.1
* Perform automatic database upgrades
* Added report formats field to reports

ART 5.0
* Fix for pivottable error with pt_BR localization
* Added schedule field for pipelines
* Increase size of username column in datasources
* Added start condition for jobs and pipelines
* Added configure_start_conditions permission
* Added BigQuery JDBC driver

ART 4.18
* Allow editing of datasource in multiple report edit
* Added extension option for csv report format
* Added import/export for pipelines
* Added running jobs page
* Updated sql server jdbc driver

ART 4.17
* Added job pipeline feature
* Added configure_pipelines permission

ART 4.16
* Allow setting a user's user groups via api
* Added REST endpoints for user groups
* Fix for error when retrieving report with parameter via api
* Updated calcite

ART 4.15
* Allow dynamic lov to use groovy data
* Apply max file upload setting to file parameter
* Include report parameters in get report REST endpoint
* Add REST endpoint to get report details by name
* Added max running option for individual reports

ART 4.14
* Added directDownload url option
* Added File parameter type
* Fix for problem with chained parameter with default values
* Added fileName report option
* Modified job fixed file name to be the base file name