@@ -1,5 +1,6 @@
 ART 5.6
 * Added jasperreports-functions jar
+* Removed ART-DBCP connection pool library option
 * Updated mysql driver to version 8
 
 ART 5.5
